--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <input type="text" id="clientName" name="clientName" placeholder="Client Name" />
       </div>
 	  <button id="signOutBtn">Sign Out</button>
-      <button type="button" onclick="printToPDF()">Save & Submit</button>
+      <button type="button" onclick="generateContractPDF()">Save & Submit</button>
     </form>
   </div>
 
