--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     .login-container, .content-container { max-width: 400px; margin: auto; padding: 20px; border: 1px solid #ccc; border-radius: 5px; }
     .logo { max-width: 150px; margin-bottom: 20px; }
     input { width: 90%; padding: 10px; margin: 10px 0; }
-    button { padding: 10px 20px; background: #4CAF50; color: white; border: none; cursor: pointer; }
-    button:hover { background: #45a049; }
+    button { padding: 10px 20px; background: #b59e7f; color: white; border: none; cursor: pointer; }
+    button:hover { background: #b59ef; }
   </style>
 </head>
 <body>
@@ -43,13 +43,14 @@
       </div>
 	  <button id="signOutBtn">Sign Out</button>
 	  <button type="button" onclick="ContractPDF()">Preview Contract PDF</button>
-      <button type="button" onclick="downloadPDF()">Save & Submit</button>
+	  <button id="hidePreviewBtn" onclick="hidePreview()">Hide Preview</button>
+      <!--button type="button" onclick="downloadPDF()">Download</button-->
     </form>
   </div>
  
   <div id="pdfPreviewContainer" style="display:none; margin-top:20px;">
 		<h3>PDF Preview</h3>
-		<iframe id="pdfPreview" style="width:100%; height:600px;" frameborder="1"></iframe>
+		<iframe id="pdfPreview" style="width:80%; height:1200px;" frameborder="1"></iframe>
 		<br/>
 		<button onclick="downloadPDF()">Download PDF</button>
   </div>
@@ -176,6 +177,11 @@
 		// Optionally, store the doc instance globally if needed for download
 		window.generatedDoc = doc;
 	}
+	
+	function hidePreview() {
+		document.getElementById("pdfPreviewContainer").style.display = "none";
+	}
+
 	
 	function downloadPDF() {
 		// Download the PDF when user clicks the download button
