--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<h3>PDF Preview</h3>
 		<iframe id="pdfPreview" style="width:80%; height:1200px;" frameborder="1"></iframe>
 		<br/>
-		<button onclick="downloadPDF()">Download PDF</button>
+		<!--button onclick="downloadPDF()">Download PDF</button-->
   </div>
 
 
