--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <input type="text" id="clientName" name="clientName" placeholder="Client Name" />
       </div>
 	  <button id="signOutBtn">Sign Out</button>
-	  <button type="button" onclick="ContractPDF()">Preview Contract PDF</button>
-	  <button id="hidePreviewBtn" onclick="hidePreview()">Hide Preview</button>
+	  <button type="button" type="button" onclick="ContractPDF()">Preview Contract PDF</button>
+	  <button id="hidePreviewBtn" type="button" onclick="hidePreview()">Hide Preview</button>
       <!--button type="button" onclick="downloadPDF()">Download</button-->
     </form>
   </div>
